--- a/mia khalifa.html
+++ b/mia khalifa.html
@@ -13,7 +13,7 @@ backround-color:#FFC0CB;
 </style>
 </head>
 <body>
-<header><h1>Welcome to mia khalifa site</h1>
+<header><h1>Welcome to mia khalifa </h1>
 <section>
 <h2>About this page </h2>
 </section>
