--- a/mia khalifa.html
+++ b/mia khalifa.html
@@ -8,7 +8,7 @@ body
 font-family:Arial,sans-serif;
 margin:0;
 padding:0;
-backround-color:#FFC0CB;
+backround-color:#fc19d2;
 }              
 </style>
 </head>
