--- a/mia khalifa.html
+++ b/mia khalifa.html
@@ -9,7 +9,10 @@ font-family:Arial,sans-serif;
 margin:0;
 padding:0;
 backround-color:#fc19d2;
-}              
+}
+footer{
+backround-color:#4CAF50;
+}  
 </style>
 </head>
 <body>
