--- a/mia khalifa.html
+++ b/mia khalifa.html
@@ -8,11 +8,9 @@ body
 font-family:Arial,sans-serif;
 margin:0;
 padding:0;
-backround-color:#fc19d2;
+backround-color:#lightbleu;
 }
-footer{
-backround-color:#4CAF50;
-}  
+
 </style>
 </head>
 <body>
